# VoiceFlow

./: .env.example  .gitignore  CLAUDE.md  GHOSTX_PROJE_RAPORU.md  GhostX_Proje_Raporu.md  README.md  build-setup.bat  next.config.ts  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build-windows-setup.yml
chrome-extension/: background.js  content.js  create-icons.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
desktop-app/: create-ico.js  create-icons.js  main.js  package-lock.json  package.json  preload.js
desktop-app/assets/: install-notice.txt
desktop-app/ghostx/: local-network.js  screen-guard.js  tor-proxy.js
desktop-app/ui/: app.js  home.html  index.html  pill.html  power-mode.html  settings.html
prisma/: schema.prisma
public/: manifest.json  robots.txt  sw.js
scripts/: setup-lemonsqueezy.mjs
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/app/demo/: page.tsx
src/app/ghostx/: layout.tsx  page.tsx
src/components/: CTA.tsx  Comparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Navbar.tsx  NotificationPrompt.tsx  OfflineBanner.tsx  Pricing.tsx  Providers.tsx  ServiceWorkerRegister.tsx  SpeedComparison.tsx  Testimonials.tsx  ThemeProvider.tsx  TrustedBy.tsx  UseCases.tsx
src/i18n/: context.tsx  en.json  tr.json
src/lib/: auth.ts  lemonsqueezy.ts  notifications.ts  sounds.ts
src/lib/ghostx/crypto-core/: Cargo.toml
src/lib/ghostx/crypto-core/src/: lib.rs  ratchet.rs
src/types/: next-auth.d.ts
(+39 files in other folders)
